added Firebase Authentication

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -9,5 +9,5 @@
   font-size: 17px;
   font-weight: 700;
   line-height: 22px;
-  border-top: 3px solid gray;
+  /* border-top: 3px solid gray; */
 }
